# cpp-project-template

./: CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
src/: CMakeLists.txt
test/: CMakeLists.txt  example_test.cpp
